--- a/trunk/doc/CHANGELOG
+++ b/trunk/doc/CHANGELOG
@@ -1,3 +1,7 @@
+1.0.1
+-----------------
+Fix issue : Content creation with non-default language - http://bit.ly/9iNxyb
+
 1.0
 -----------------
 Initial release
