Fix issue : Parent location doesn't update in publisher Implemented "defaultLocation" in SQLIContent. You can now get the default location, corresponding to content 'main_node' : $defaultLocation = $sqliContent->defaultLocation; // returns SQLILocation
git-svn-id: http://svn.projects.ez.no/sqliimport@9 2a6981fd-8425-43d0-a6e9-5fa307465723

--- a/trunk/doc/CHANGELOG
+++ b/trunk/doc/CHANGELOG
@@ -1,6 +1,8 @@
 1.0.1
 -----------------
 Fix issue : Content creation with non-default language - http://bit.ly/9iNxyb
+Fix issue : Parent location doesn't update in publisher
+Implemented "defaultLocation" in SQLIContent. You can now get the default location, corresponding to content 'main_node' : $defaultLocation = $sqliContent->defaultLocation; // returns SQLILocation
 
 1.0
 -----------------
