Fixed a notice in SQLIImportFactory::cleanup()
git-svn-id: http://svn.projects.ez.no/sqliimport@14 2a6981fd-8425-43d0-a6e9-5fa307465723

--- a/trunk/doc/CHANGELOG
+++ b/trunk/doc/CHANGELOG
@@ -1,3 +1,7 @@
+1.0.3
+-----------------
+Fixed a notice in SQLIImportFactory::cleanup()
+
 1.0.2
 -----------------
 Fixed issue : Exception thrown when setting a RobotUserID
