Implemented shorthand method to easily handle HTML in content API
git-svn-id: http://svn.projects.ez.no/sqliimport@16 2a6981fd-8425-43d0-a6e9-5fa307465723

--- a/trunk/doc/CHANGELOG
+++ b/trunk/doc/CHANGELOG
@@ -2,6 +2,7 @@
 -----------------
 Fixed a notice in SQLIImportFactory::cleanup()
 Fixed issue with section assignement on new sqli content object - http://bit.ly/aD8O61
+Implemented shorthand method to easily handle HTML in content API
 
 1.0.2
 -----------------
