Added manual frequency support for scheduled imports (not less than every 5 minutes) Added import duration monitor
git-svn-id: http://svn.projects.ez.no/sqliimport@20 2a6981fd-8425-43d0-a6e9-5fa307465723

--- a/trunk/doc/CHANGELOG
+++ b/trunk/doc/CHANGELOG
@@ -1,3 +1,11 @@
+1.1.0
+-----------------
+Added manual frequency support for scheduled imports (not less than every 5 minutes)
+Added import duration monitor
+Fixed issue : Imports are blocked after a transaction error
+Fixed some i18n issues
+Fixed a notice in SQLIImportHandlerOptions::__toString()
+
 1.0.3
 -----------------
 Fixed a notice in SQLIImportFactory::cleanup()
