Implemented feature : SIGTERM and SIGINT calls are now caught and import is smoothly and safely interrupted (PCNTL extension needed)
git-svn-id: http://svn.projects.ez.no/sqliimport@23 2a6981fd-8425-43d0-a6e9-5fa307465723

--- a/trunk/doc/CHANGELOG
+++ b/trunk/doc/CHANGELOG
@@ -1,3 +1,7 @@
+1.2.0
+-----------------
+Implemented feature : SIGTERM and SIGINT calls are now caught and import is smoothly and safely interrupted (PCNTL extension needed)
+
 1.1.0
 -----------------
 Added manual frequency support for scheduled imports (not less than every 5 minutes)
