Fixed issue : Scheduled imports - schedule is shifting - http://bit.ly/cJPe5F
git-svn-id: http://svn.projects.ez.no/sqliimport@24 2a6981fd-8425-43d0-a6e9-5fa307465723

--- a/trunk/doc/CHANGELOG
+++ b/trunk/doc/CHANGELOG
@@ -1,6 +1,7 @@
 1.2.0
 -----------------
 Implemented feature : SIGTERM and SIGINT calls are now caught and import is smoothly and safely interrupted (PCNTL extension needed)
+Fixed issue : Scheduled imports - schedule is shifting - http://bit.ly/cJPe5F
 
 1.1.0
 -----------------
