--- a/trunk/doc/CHANGELOG
+++ b/trunk/doc/CHANGELOG
@@ -2,6 +2,7 @@
 -----------------
 Implemented feature : SIGTERM and SIGINT calls are now caught and import is smoothly and safely interrupted (PCNTL extension needed)
 Fixed issue : Scheduled imports - schedule is shifting - http://bit.ly/cJPe5F
+Fixed issue : Editing a scheduled import may add empty options - http://bit.ly/bXYAPH
 
 1.1.0
 -----------------
