SQLIContentUtils::getRemoteFile() : Added a parameter indicating whether to allow proxy use or not, allowing to override proxy settings from site.ini
git-svn-id: http://svn.projects.ez.no/sqliimport@30 2a6981fd-8425-43d0-a6e9-5fa307465723

--- a/trunk/doc/CHANGELOG
+++ b/trunk/doc/CHANGELOG
@@ -1,6 +1,7 @@
 1.2.1
 -----------------
 Fixed issue with SQLICSVDoc::parse() : Didn't return csv doc object - http://bit.ly/dbphvq
+SQLIContentUtils::getRemoteFile() : Added a parameter indicating whether to allow proxy use or not, allowing to override proxy settings from site.ini
 
 1.2.0
 -----------------
