Added Oracle support (Thanks Simone Tellini !)
git-svn-id: http://svn.projects.ez.no/sqliimport@35 2a6981fd-8425-43d0-a6e9-5fa307465723

--- a/trunk/doc/CHANGELOG
+++ b/trunk/doc/CHANGELOG
@@ -1,5 +1,6 @@
 1.2.1
 -----------------
+Added Oracle schema (Thanks Simone Tellini !)
 Updated doc about content options and publish options - http://bit.ly/f3f2RI
 Fixed issue : Datatypes fromString() / toString() always appear consistent, even if they are not implemented - http://bit.ly/f3f2RI
 Fixed "Using $this in a non object context in sqlilocation" - http://bit.ly/fzJN8G
